[gd_scene load_steps=7 format=3 uid="uid://d0qn664v61ibh"]

[ext_resource type="PackedScene" uid="uid://b3xqb4wrpa43a" path="res://scenes/title_menu_button.tscn" id="1_ex71d"]
[ext_resource type="Script" path="res://scripts/settings_container.gd" id="1_f80q6"]
[ext_resource type="Theme" uid="uid://cxj6si8d5q8i7" path="res://resources/font_thin.tres" id="1_ppdf7"]
[ext_resource type="Texture2D" uid="uid://bq4ek7x0yq66c" path="res://resources/slider_grabber.tres" id="2_y4ahn"]
[ext_resource type="StyleBox" uid="uid://buyqi8tle4bqv" path="res://resources/button_style_flat.tres" id="3_hdbmn"]
[ext_resource type="Texture2D" uid="uid://duw33ed6g6bq2" path="res://resources/slider_grabber_highlight.tres" id="4_ba53t"]

[node name="SettingsContainer" type="MarginContainer"]
custom_minimum_size = Vector2(300, 300)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_f80q6")

[node name="BackButton" parent="." instance=ExtResource("1_ex71d")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath("../GridContainer/MasterVolumeSlider")
focus_next = NodePath("../GridContainer/MasterVolumeSlider")
focus_previous = NodePath(".")
text = "Back"

[node name="SettingsLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_ppdf7")
theme_override_font_sizes/font_size = 16
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 3

[node name="MasterVolumeLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "Master Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
focus_neighbor_top = NodePath("../../BackButton")
focus_neighbor_bottom = NodePath("../MusicVolumeSlider")
focus_next = NodePath("../MusicVolumeSlider")
focus_previous = NodePath("../../BackButton")
theme = ExtResource("1_ppdf7")
theme_override_icons/grabber = ExtResource("2_y4ahn")
theme_override_icons/grabber_highlight = ExtResource("4_ba53t")
theme_override_styles/grabber_area = ExtResource("3_hdbmn")
theme_override_styles/grabber_area_highlight = ExtResource("3_hdbmn")
max_value = 1.0
step = 0.05
value = 1.0

[node name="MasterVolumeValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolumeLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "Music Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
focus_neighbor_top = NodePath("../MasterVolumeSlider")
focus_neighbor_bottom = NodePath("../SFXVolumeSlider")
focus_next = NodePath("../SFXVolumeSlider")
focus_previous = NodePath("../MasterVolumeSlider")
theme = ExtResource("1_ppdf7")
theme_override_icons/grabber = ExtResource("2_y4ahn")
theme_override_icons/grabber_highlight = ExtResource("4_ba53t")
theme_override_styles/grabber_area = ExtResource("3_hdbmn")
theme_override_styles/grabber_area_highlight = ExtResource("3_hdbmn")
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolumeValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolumeLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "SFX Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
focus_neighbor_top = NodePath("../MusicVolumeSlider")
focus_neighbor_bottom = NodePath("../AmbientVolumeSlider")
focus_next = NodePath("../AmbientVolumeSlider")
focus_previous = NodePath("../MusicVolumeSlider")
theme = ExtResource("1_ppdf7")
theme_override_icons/grabber = ExtResource("2_y4ahn")
theme_override_icons/grabber_highlight = ExtResource("4_ba53t")
theme_override_styles/grabber_area = ExtResource("3_hdbmn")
theme_override_styles/grabber_area_highlight = ExtResource("3_hdbmn")
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXVolumeValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmbientVolumeLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "Ambient Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AmbientVolumeSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
focus_neighbor_top = NodePath("../SFXVolumeSlider")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../SFXVolumeSlider")
theme = ExtResource("1_ppdf7")
theme_override_icons/grabber = ExtResource("2_y4ahn")
theme_override_icons/grabber_highlight = ExtResource("4_ba53t")
theme_override_styles/grabber_area = ExtResource("3_hdbmn")
theme_override_styles/grabber_area_highlight = ExtResource("3_hdbmn")
max_value = 1.0
step = 0.05
value = 1.0

[node name="AmbientVolumeValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
